Masking vertices in weight paint doesn't work with subsurf #47890

Closed
opened 2016-03-22 18:10:28 +01:00 by Szymon Pieczko · 14 comments

System Information
Windows 7, Nvidia Geforce GT 440
also tested official 2.77 on Linux 64 Bit

Blender Version
Broken: 2.77 22a2853
Worked: (optional) 2.76 48f7dd6

Short description of error
When Subsurf modifier is active, while weight painting, you can't select any vertex after pressing 'V'
Instead, the screen darkens( on 'Window Drawing Method' set to 'Triple Buffering') or glitches a bit until next possible window refresh(either 1 second of wait, or mouse move)

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open new file
  2. Add 'Subsurf' modifier to a model
  3. Enter 'Weight Paint' mode
  4. Press 'V' to enter 'Vertex Selection masking' mode
  5. Try to select one or more vertices (by right clicking, Circle selecting or Box Selecting)
**System Information** Windows 7, Nvidia Geforce GT 440 also tested official 2.77 on Linux 64 Bit **Blender Version** Broken: 2.77 22a2853 Worked: (optional) 2.76 48f7dd6 **Short description of error** When Subsurf modifier is active, while weight painting, you can't select any vertex after pressing 'V' Instead, the screen darkens( on 'Window Drawing Method' set to 'Triple Buffering') or glitches a bit until next possible window refresh(either 1 second of wait, or mouse move) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Open new file 2. Add 'Subsurf' modifier to a model 3. Enter 'Weight Paint' mode 4. Press 'V' to enter 'Vertex Selection masking' mode 5. Try to select one or more vertices (by right clicking, Circle selecting or Box Selecting)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Sim_Piko

Added subscriber: @Sim_Piko

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Can't redo this error.
Please include a blend file in the non-working state.

Can't redo this error. Please include a blend file in the non-working state.

This comment was removed by @ideasman42

*This comment was removed by @ideasman42*

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

weightmaskfail.blend

Trying to for example deselect the vertices with B + MMB causes the interface to go dark and weird.

Trying to select vertices with RMB after pressing A to deselect doesn't work.

Edit I record video of it happening

weightmask.mp4.zip

[weightmaskfail.blend](https://archive.blender.org/developer/F297988/weightmaskfail.blend) Trying to for example deselect the vertices with B + MMB causes the interface to go dark and weird. Trying to select vertices with RMB after pressing A to deselect doesn't work. Edit I record video of it happening [weightmask.mp4.zip](https://archive.blender.org/developer/F297989/weightmask.mp4.zip)

Added subscriber: @sindra1961

Added subscriber: @sindra1961

circle/box select does not seem to work definitely in weight paint for the mesh object with subserf modifier.
(vertex masking mode)

windows 10 pro 64bits
Blender 2.77 (sub 0) hash: b0a7e77

circle/box select does not seem to work definitely in weight paint for the mesh object with subserf modifier. (vertex masking mode) windows 10 pro 64bits Blender 2.77 (sub 0) hash: b0a7e77

2.76b release version: OK
2.77 release version: NG

2.76b release version: OK 2.77 release version: NG

2.76b daily build (Hash: 17429dc) : NG

2.76b daily build (Hash: 17429dc) : NG
Campbell Barton self-assigned this 2016-03-23 09:45:33 +01:00

Confirmed, caused by 147f7a1e86

Confirmed, caused by 147f7a1e86

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 0f501a73ab

This issue was referenced by 0f501a73ab6181471dd9de2bd1c8c799c997caa4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47890
No description provided.