Fix T47890: Vertex mask w/ subsurf select fails

Regression in GL refactor